# is_annotated

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  conftest.py  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml  ossar.yml
src/is_annotated/: __init__.py
tests/: test_unit.py
