[build-system]
  build-backend = "hatchling.build"
  requires      = ["hatch-vcs", "hatchling"]


[project]
  authors = [
    { name = "Nathaniel Starkman", email = "nstarman@users.noreply.github.com" },
  ]
  classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
  ]
  dependencies = ["typing_extensions >= 4.0"]
  description = "Check if an object is an `Annotated` type."
  dynamic = ["version"]
  license.file = "LICENSE"
  name = "is_annotated"
  readme = "README.md"
  requires-python = ">=3.9"

[dependency-groups]
  dev = [
    "cz-conventional-gitmoji>=0.6.1",
    "ipykernel>=6.29.5",
    "pre-commit>=4.0.1",
    "uv>=0.6.4",
    { include-group = "build" },
    { include-group = "test" },
  ]
build = [
  "build>=1.3.0",
]
lint = [
    "mypy>=1.19.0",
    "pre-commit>=4.2.0",
    "pylint>=3.3.9",
]
nox = [
    "nox>=2025.5.1",
    "nox-uv>=0.6.3",
]
  test = [
    "optional_dependencies >= 0.3",
    "pytest >=6",
    "pytest-cov >=3",
    "pytest-github-actions-annotate-failures",
    "sybil",
    "nox"
  ]

  [project.urls]
    "Bug Tracker" = "https://github.com/GalacticDynamics/is_annotated/issues"
    Changelog     = "https://github.com/GalacticDynamics/is_annotated/releases"
    Homepage      = "https://github.com/GalacticDynamics/is_annotated"


[tool.hatch]
  version.source = "vcs"

  [tool.hatch.envs.default]
    features     = ["test"]
    scripts.test = "pytest {args}"


[tool.pytest.ini_options]
  addopts = [
    "--showlocals",
    "--strict-config",
    "--strict-markers",
    "-p no:doctest",    # using sybil
    "-ra",
  ]
  filterwarnings = ["error"]
  log_cli_level = "INFO"
  minversion = "6.0"
  testpaths = ["src/", "tests/"]
  xfail_strict = true


[tool.coverage]
  report.exclude_also = ['\.\.\.', 'if typing.TYPE_CHECKING:']
  run.source          = ["is_annotated"]

[tool.mypy]
  disallow_incomplete_defs = false
  disallow_untyped_defs    = false
  enable_error_code        = ["ignore-without-code", "redundant-expr", "truthy-bool"]
  files                    = ["src"]
  python_version           = "3.9"
  strict                   = true
  warn_unreachable         = true
  warn_unused_configs      = true

  [[tool.mypy.overrides]]
    disallow_incomplete_defs = true
    disallow_untyped_defs    = true
    module                   = "is_annotated.*"


[tool.ruff]

  [tool.ruff.lint]
    extend-select = ["ALL"]
    ignore = [
      "D203",    # 1 blank line required before class docstring
      "D213",    # Multi-line docstring summary should start at the second line
      "FIX002",  # Line contains TODO, consider resolving the issue
      "ISC001",  # Conflicts with formatter
      "PLR09",   # Too many <...>
      "PLR2004", # Magic value used in comparison
      "TD002",   # Missing author in TODO
      "TD003",   # Missing issue link on the line following this TODO
    ]

    [tool.ruff.lint.per-file-ignores]
      "noxfile.py" = ["T20"]
      "tests/**"   = ["ANN", "INP001", "S101", "T20"]

    [tool.ruff.lint.isort]
      combine-as-imports     = true
      extra-standard-library = ["typing_extensions"]
      known-first-party      = ["optional_dependencies"]
      known-local-folder     = ["is_annotated"]


[tool.pylint]
  ignore-paths = [".*/_version.py"]
  messages_control.disable = [
    "design",
    "fixme",
    "line-too-long",
    "missing-function-docstring",
    "missing-module-docstring",
    "wrong-import-position",
  ]
  py-version = "3.9"
  reports.output-format = "colorized"
  similarities.ignore-imports = "yes"


[tool.codespell]
  skip = "uv.lock"
